Another run at static final