@@ -49,12 +49,40 @@ final class PosixNativeAccess extends NativeAccess {
   /** Don't need these pages. */
   public static final int POSIX_MADV_DONTNEED = 4;
 
-  private final MethodHandle mh$posix_madvise;
+  private static final MethodHandle mh$posix_madvise;
 
-  public PosixNativeAccess() {
+  private static final PosixNativeAccess INSTANCE; // may be null
+
+  private PosixNativeAccess() {}
+
+  static PosixNativeAccess getInstanceOrNull() {
+    return INSTANCE;
+  }
+
+  static {
+    MethodHandle adviseHandle = null;
+    PosixNativeAccess instance = null;
+    try {
+      adviseHandle = lookupMadvise();
+      instance = new PosixNativeAccess();
+    } catch (UnsupportedOperationException uoe) {
+      LOG.warning(uoe.getMessage());
+    } catch (IllegalCallerException ice) {
+      LOG.warning(
+          String.format(
+              Locale.ENGLISH,
+              "Lucene has no access to native functions (%s). To enable access to native functions, "
+                  + "pass the following on command line: --enable-native-access=org.apache.lucene.core",
+              ice.getMessage()));
+    }
+    mh$posix_madvise = adviseHandle;
+    INSTANCE = instance;
+  }
+
+  private static MethodHandle lookupMadvise() {
     final Linker linker = Linker.nativeLinker();
     final SymbolLookup stdlib = linker.defaultLookup();
-    this.mh$posix_madvise =
+    final MethodHandle mh =
         findFunction(
             linker,
             stdlib,
@@ -65,6 +93,7 @@ final class PosixNativeAccess extends NativeAccess {
                 ValueLayout.JAVA_LONG,
                 ValueLayout.JAVA_INT));
     LOG.info("posix_madvise() available on this platform");
+    return mh;
   }
 
   private static MethodHandle findFunction(
